HasCASL/test/OpDecls.hascasl
type s, t

op a, b  : s

%% op __ + __ : s  -> s -> s, idem, assoc, comm;

op __ + __ : s * s -> s
op __ + __ : t * t -> t
op __ + __ : t -> t -> t

op a,b : t

op c : s = a + b

op d : s = ((a) + (a))

op e : s * s -> s = __ + __  

op f : s * s -> s = (__ + __)  

op g : s * s = (a, b)

op h : s = (__ + __) (a, b)


op incr : s -> s

op i1 : s = incr a
op i2 : s = incr (a)
op i3 : s = (incr) (a)
